message_feed: Fix alignment of EDITED notices in /me message.
Fixes part of #23101.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -961,7 +961,7 @@ td.pointer {
     max-width: calc(100% - 50px);
 
     .message_edit_notice {
-        line-height: 18px;
+        vertical-align: middle;
     }
 }
 
